--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
   <script src="assets/js/jquery.fitvids.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVpv69KYRfGPupWha9wePFjryWxcI19p0&callback=initMap"></script>
   <script src="assets/js/scripts.js"></script>
   <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
   <script>
