--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           <div class="col-md-6">
             <div class="contact-form">
               <strong>Send me a message</strong>
-              <form name="contact-form" id="contactForm" action="sendemail.php" method="GET">
+              <form name="contact-form" id="contactForm" action="sendemail.php" method="POST">
 
                 <div class="form-group">
                   <label for="name">Name</label>
