--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
             <li><a class="active" data-group="all">All</a></li>
             <li><a data-group="design">Web Design</a></li>
             <li><a data-group="web">JavaScript</a></li>
-            <li><a data-group="interface">jQuery</a></li>
-            <li><a data-group="identety">PHP</a></li>
+            <li><a data-group="interface">C++</a></li>
+            <li><a data-group="identety">Android</a></li>
         </ul>
 
         <div class="row">
